fix white space between sections issue by turning container into a flex container

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+.container {
+  display: flex;
+  flex-direction: column;
+}
 .landing-container {
   /* display: flex;
   flex-direction: column; */
@@ -47,6 +51,7 @@
 .projects--title {
   font-size: 6em;
   flex-basis: 100%;
+  margin-left: 30px;
 }
 .about_me-text__container {
   /* line-height: 1.5em; */
@@ -63,6 +68,7 @@ p .about-me__text {
 .projects-container {
   height: 100vh;
   background-color: green;
+  margin-bottom: 0;
 }
 .main-projects {
   display: flex;
@@ -100,6 +106,7 @@ ul {
 .contact-container {
   height: 100vh;
   background-color: yellow;
+  margin-top: 0;
 }
 .contact--title {
   font-size: 4em;
